--- a/main.html
+++ b/main.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<button id="btn" type="submit" > Only plain text without any additional tags inside the button </button>
+
 </body>
 
 </html>
